--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    
+    <title>Digambar's Portfolio</title>
+ </head>
+ <body>
+    <h1>Digambar Dhanagar's Portfolio</h1>
+    <h2> I am Atlassian Engineer</h2>
+    <hr/>
+    <h3><a href="./public/movie-ranking.html"> Movie Ranking Project </a></h3>
+    <img src="assets/images/movie-ranking.png" height="200" alt="Movie Ranking Project Preview" />
+    <h3><a href= "./public/birthday-invite.html"> Birthday Invite Project</a></h3>
+    <img src="assets/images/birthday-invite.png" height="200" alt="Birthday Invite Project Preview" />
+    <hr />
+    <a href="./public/about.html"> About Me</a>
+    <a href="./public/contact.html"> Contact Me</a>
+ </body>
+ </html>
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
 
